# Grok-Codex

./: .gitignore  LAUNCHER_GUIDE.md  README.md  config.toml  launch-grok-codex.sh  next.md  package-lock.json  package.json
.codex/: config.toml
.github/codex/home/: config.toml
.github/workflows/: ci.yml  rust-release.yml
codex-cli/: README.md  package-lock.json  package.json
codex-cli/scripts/: build_npm_package.py
codex-rs/: Cargo.toml  README.md
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: main.rs  mcp_cmd.rs
codex-rs/cli/tests/: mcp_add_remove.rs  mcp_list.rs
codex-rs/common/: README.md
codex-rs/common/src/: model_presets.rs
codex-rs/core/: Cargo.toml
codex-rs/core/src/: auth.rs  bash.rs  client.rs  codex.rs  config.rs  config_types.rs  default_client.rs  git_info.rs  lib.rs  mcp_connection_manager.rs  model_family.rs  model_provider_info.rs  safety.rs
codex-rs/exec/src/: exec_events.rs  experimental_event_processor_with_json_output.rs  lib.rs
codex-rs/exec/tests/: event_processor_with_json_output.rs
codex-rs/mcp-client/src/: main.rs  mcp_client.rs
codex-rs/responses-api-proxy/: Cargo.toml  README.md
codex-rs/responses-api-proxy/src/: lib.rs  main.rs  read_api_key.rs
codex-rs/rmcp-client/: Cargo.toml
codex-rs/rmcp-client/src/: lib.rs  rmcp_client.rs  utils.rs
codex-rs/tui/: Cargo.toml
docs/: authentication.md  config.md  install.md  sandbox.md  xai_configuration.md  xai_testing_guide.md
docs/examples/: xai_config.toml
scripts/: test_xai_api.py  test_xai_curl.sh  validate_xai_integration.sh
src/c/: Makefile  README.md
(+391 files in other folders)
